[tool.poetry]
name = "project"
version = "0.1.0"
description = ""
authors = ["osminin <osminin555@bk.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.12,<4.0"
django = "^5.2"
dotenv = "^0.9.9"
daphne = "^4.1.2"
django-debug-toolbar = "^5.1.0"
django-extensions = "^4.1"
psycopg2-binary = "^2.9.10"
mimesis = "^18.0.0"
tqdm = "^4.67.1"
channels-redis = "^4.2.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
